--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "expo-app",
-  "main": "expo-router/entry",
+  "name": "baileys-best-day",
   "version": "1.0.0",
+  "main": "expo-router/entry",
   "scripts": {
-    "start": "bunx rork start -p p6rgvm0k0gsfkfodtfzqj --tunnel",
-    "start-web": "bunx rork start -p p6rgvm0k0gsfkfodtfzqj --web --tunnel",
-    "start-web-dev": "DEBUG=expo* bunx rork start -p p6rgvm0k0gsfkfodtfzqj --web --tunnel"
+    "start": "bunx rork start -p p6rgvm0k0gsfkfodtfzq --tunnel",
+    "start-web": "bunx rork start -p p6rgvm0k0gsfkfodtfzq --web --tunnel",
+    "start-web-dev": "DEBUG=expo* bunx rork start -p p6rgvm0k0gsfkfodtfzq --web --tunnel"
   },
   "dependencies": {
-  "react": "18.3.1",
-  "react-dom": "18.3.1",
-  "lucide-react-native": "^0.475.0",
-  "expo": "^53.0.4",
-  "expo-router": "~5.1.0",
-  "expo-image": "~2.3.0",
-  "expo-web-browser": "~14.2.0",
-  "react-native": "0.79.4",
-  "react-native-safe-area-context": "5.4.0",
-  "react-native-screens": "~4.11.1",
-  "@react-native-async-storage/async-storage": "^1.21.0",
-  "firebase": "^10.12.2"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "lucide-react-native": "^0.475.0",
+    "expo": "^53.0.4",
+    "expo-router": "~5.1.0",
+    "expo-image": "~2.3.0",
+    "expo-web-browser": "~14.2.0",
+    "react-native": "0.79.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "firebase": "^10.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,3 +29,4 @@
   },
   "private": true
 }
+
