--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "baileys-best-day",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -17,6 +17,7 @@
     "expo-image": "2.3.0",
     "expo-web-browser": "14.2.0",
     "expo-linking": "7.1.5",
+    "@expo/vector-icons": "14.1.0",
     "lucide-react-native": "0.475.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "4.11.1",
