--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "expo-linking": "7.1.5",
     "expo-router": "5.1.0",
     "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
     "expo-web-browser": "14.2.0",
     "firebase": "^10.14.1",
-    "lucide-react-native": "0.475.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.79.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "4.11.1"
