--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "0.79.4",
-    "expo": "53.0.4",
-    "expo-router": "5.1.0",
-    "expo-image": "2.3.0",
-    "expo-web-browser": "14.2.0",
-    "expo-linking": "7.1.5",
     "@expo/vector-icons": "14.1.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "4.11.1",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "expo": "53.0.4",
+    "expo-image": "2.3.0",
+    "expo-linking": "7.1.5",
+    "expo-router": "^5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "firebase": "^10.14.1"
+    "expo-web-browser": "14.2.0",
+    "firebase": "^10.14.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "typescript": "~5.8.3"
   },
   "private": true
