🔒 Backup before global path and structure changes

--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "app.rork.pet-life-journal"
+      "package": "com.baileysbestday.appl"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
