--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
     "@expo/config-plugins": "~10.1.1",
     "@expo/vector-icons": "14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "expo": "53.0.12",
-    "expo-image": "2.3.0",
-    "expo-image-picker": "^16.1.4",
-    "expo-linking": "7.1.5",
-    "expo-location": "^18.1.6",
+    "@react-native-picker/picker": "^2.11.1",
     "expo": "53.0.20",
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
+    "expo-location": "~18.1.6",
     "expo-router": "^5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -29,16 +26,14 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-maps": "1.20.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "4.11.1",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
-    "uuid": "^11.1.0",
-    "@react-native-picker/picker": "2.11.1",
-    "expo-location": "~18.1.6",
-    "react-native-maps": "1.20.1"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
