--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]  // ✅ changed from ./app/* to ./src/*
+      "@/*": ["./app/*"]  // ✅ changed from ./src/* to ./app/*
     }
   },
   "include": [
